--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
         </header>
         <section class="card__subscription">
           <h3 class="card__subscription--title">Monthly Subscription</h3>
-          <p class="card__subscription--price">
-            <span>&dollar;29</span> per month
-          </p>
+          <div class="card__subscription--price">
+            <span class="card__subscription--price--title">&dollar;29</span>
+            <span class="card__subscription--price--para">per month</span>
+          </div>
           <p class="card__subscription--para">
             Full access for less than &dollar;1 a day
           </p>
